syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.authentication.client.api.grpc";
option java_outer_classname = "AccountServiceProto";

service AccountService {
  rpc register (AccountRegisterGrpcCmd) returns (google.protobuf.Empty);
  rpc updateById (AccountUpdateByIdGrpcCmd) returns (google.protobuf.Empty);
  rpc updateRoleById(AccountUpdateRoleGrpcCmd) returns (google.protobuf.Empty);
  rpc disable(AccountDisableGrpcCmd) returns (google.protobuf.Empty);
}

message AccountRegisterGrpcCmd {
  AccountRegisterGrpcCo accountRegisterCo = 1;
  google.protobuf.Int64Value captchaId = 2;
  google.protobuf.StringValue captcha = 3;
}

message AccountRegisterGrpcCo {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue password = 3;
  repeated google.protobuf.StringValue roleCode = 4;
  google.protobuf.StringValue avatarUrl = 5;
  google.protobuf.StringValue phone = 6;
  oneof sex_wrapper {
    SexEnum sex = 7;
  }
  google.protobuf.StringValue timezone = 8;
  google.protobuf.StringValue email = 9;
  oneof language_wrapper {
    LanguageEnum language = 10;
  }
  oneof birthday_wrapper {
    LocalDate birthday = 11;
  }
  repeated AccountAddressRegisterGrpcCo addresses = 12;
}

message AccountUpdateByIdGrpcCmd{
  AccountUpdateByIdGrpcCo accountUpdateByIdGrpcCo = 1;
}

message AccountUpdateByIdGrpcCo{
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue avatarUrl = 2;
  google.protobuf.StringValue phone = 3;
  google.protobuf.StringValue email = 4;
  oneof sex_wrapper {
    SexEnum sex = 5;
  }
  google.protobuf.StringValue timezone = 6;
}

message AccountUpdateRoleGrpcCmd{
  AccountUpdateRoleGrpcCo accountUpdateRoleGrpcCo = 1;
}

message AccountUpdateRoleGrpcCo{
  google.protobuf.Int64Value id = 1;
  repeated google.protobuf.StringValue roleCode = 2;
}

enum SexEnum
{
  MALE = 0;
  FEMALE = 1;
  GREY = 2;
  SEXLESS = 3;
}

enum LanguageEnum
{
  ZH = 0;
  EN = 1;
}

message LocalDate {
  google.protobuf.Int32Value year = 1;
  google.protobuf.Int32Value month = 2;
  google.protobuf.Int32Value day = 3;
}

message AccountAddressRegisterGrpcCo{
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue street = 2;
  google.protobuf.StringValue city = 3;
  google.protobuf.StringValue state = 4;
  google.protobuf.StringValue postalCode = 5;
  google.protobuf.StringValue country = 6;
}

message AccountDisableGrpcCmd{
  google.protobuf.Int64Value id = 1;
}

